Add profile options linked to vz website

--- a/.env.template
+++ b/.env.template
@@ -1,2 +1,19 @@
-TOKEN=
-LOG_CHANNEL=
+VZ_TOKEN=
+
+VZ_LOG_CHANNEL=
+VZ_ADMIN_ROLE=
+VZ_TEAM_ROLE=
+VZ_SERIAL_CATEGORY=
+VZ_SERIAL_ANNOUNCEMENT_CHANNEL=
+
+VZ_SERIAL_BASE_PLATE_LOCATION=""
+VZ_SERIAL_NUMBER_PLATES_LOCATION=""
+
+VZ_WEBSITE_URL=""
+
+VZ_DB_USER=vzbot
+VZ_DB_ROOT_PASSWORD=vzbot
+VZ_DB_HOST=localhost
+VZ_DB_PASSWORD="123"
+VZ_DB_DATABASE=vzbot
+VZ_DB_PORT=3306
